--- a/index.qmd
+++ b/index.qmd
@@ -2,7 +2,7 @@
 title: "Steady Learning, SteadyGrit"
 ---
 
-This is a Quarto website.
+Karl Marquez
 
 To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
 
