--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Steady Learning, SteadyGrit"
 subtitle: "This is a subtitle"
-image: images/karlgolf.jpg
+image: images/karlgolf.JPG
 ---
 
 Karl Marquez
