--- a/index.qmd
+++ b/index.qmd
@@ -5,7 +5,9 @@ listing:
   contents: Blog
   sort: "date desc"
   type: default
+  image-align: right
   categories: true
+  filter-ui: true
 page-layout: full
 title-block-banner: true
 ---
